<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.80"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_app_logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_weight="0.20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_22ssp" />

            <include
                android:id="@+id/username"
                layout="@layout/layout_update_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp" />

            <include
                android:id="@+id/password"
                layout="@layout/layout_update_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp" />

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_solid_black_corner_6"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/or"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="@dimen/_52sdp"
                    android:layout_height="@dimen/_52sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:layout_width="@dimen/_52sdp"
                    android:layout_height="@dimen/_52sdp"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_google" />

                <ImageView
                    android:layout_width="@dimen/_52sdp"
                    android:layout_height="@dimen/_52sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_linkedin" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/no_account_create_one"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </LinearLayout>

</layout>